# gtk-rs-core-mangled

./: Cargo.toml
